[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader-icd = { version = "0.1.0", path = "../bootloader-icd", features = ["use-std"] }
postcard-rpc = { version = "0.11.3", features = ["use-std"] }
poststation-sdk = "0.3.1"
rand = "0.8.5"
serde = "1.0.217"
smart-leds = "0.4.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
