[package]
name = "bootloader-nrf52840"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m                = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-executor        = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf             = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync            = { version = "0.6.1", features = ["defmt"] }
embassy-time            = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb             = { version = "0.3.0", features = ["defmt"] }
panic-probe             = { version = "0.3",   features = ["print-defmt"] }
postcard-rpc            = { version = "0.11.0",   features = ["embassy-usb-0_3-server"] }
postcard                = { version = "1.1.0" }
postcard-schema         = { version = "0.2.0", features = ["derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt             = "0.7.0"
defmt                   = "0.3"
defmt-rtt               = "0.4"
static_cell             = "2.1"
bootloader-icd            = { path = "../bootloader-icd" }
grounded = { version = "0.2.0", features = ["cas"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-nrf          = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-time-driver  = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-usb          = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
embassy-usb-driver   = { git = "https://github.com/embassy-rs/embassy", rev = "6789b5141f9280f1e3d7c6dfcab1a07fe4620b43" }
