[package]
name = "bridge-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.defmt]
version = "0.3"

[dependencies.heapless]
version = "0.8"
default-features = false
features = ["serde"]

[dependencies.postcard]
version = "1.1"

[dependencies.postcard-rpc]
version = "0.11"

[dependencies.postcard-schema]
version = "0.2"
features = ["derive", "heapless-v0_8"]

[dependencies.poststation-fw-icd]
path = "/Users/james/onevariable/poststation-util/crates/poststation-fw-icd"

[features]
use-std = ["poststation-fw-icd/use-std"]

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
